--- a/assets/testMarkup.html
+++ b/assets/testMarkup.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link
     rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
   />
-  <link rel="stylesheet" href="assets/style.css" />
-  <title>Work Day Scheduler</title>
+  <link rel="stylesheet" href="../assets/style.css" />
+  <title>Team Builder</title>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     </header>
     <div class="container">
 
-      <div class="card text-bg-warning mb-3" style="max-width: 18rem;">
+      <!-- <div class="card mb-3" style="max-width: 18rem;">
         <div class="card-header">Manager name</div>
         <div class="card-body">
           <h5 class="card-title">Manager</h5>
@@ -29,15 +30,15 @@
             <li class="list-group-item">Github: </li>
           </ul>
         </div>
-      </div>
+      </div> -->
 
         <div class="card text-bg-info mb-3" style="max-width: 18rem;">
-          <div class="card-header">Header</div>
+          <div class="card-header">${response.teamMember} <span class="icon">   ${response.position} &#xF4C8;</span> </div>
           <div class="card-body">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">ID: </li>
-              <li class="list-group-item">Email: </li>
-              <li class="list-group-item">Github: </li>
+              <li class="list-group-item">ID: ${response.id} </li>
+              <li class="list-group-item">Email: ${response.email} </li>
+              <li class="list-group-item">Github: ${response.github} </li>
             </ul>
           </div>
         </div>
