--- a/assets/testMarkup.html
+++ b/assets/testMarkup.html
@@ -42,5 +42,26 @@
             </ul>
           </div>
         </div>
+        <div class="card text-bg-info mb-3" style="max-width: 18rem;">
+          <div class="card-header">${response.teamMember} <span class="icon">   ${response.position} &#xF4C8;</span> </div>
+          <div class="card-body">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">ID: ${response.id} </li>
+              <li class="list-group-item">Email: ${response.email} </li>
+              <li class="list-group-item">Github: ${response.github} </li>
+            </ul>
+          </div>
+        </div>
+        <div class="card text-bg-info mb-3" style="max-width: 18rem;">
+          <div class="card-header">${response.teamMember} <span class="icon">   ${response.position} &#xF4C8;</span> </div>
+          <div class="card-body">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">ID: ${response.id} </li>
+              <li class="list-group-item">Email: ${response.email} </li>
+              <li class="list-group-item">Github: ${response.github} </li>
+            </ul>
+          </div>
+        </div>
+        
 
 </body>
