--- a/index.html
+++ b/index.html
@@ -1,37 +1,30 @@
 <!DOCTYPE html>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link
-    rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-  />
-  <link rel="stylesheet" href="../assets/style.css" />
-  <title>Team Builder</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./assets/style.css" />
+    <title>Team Builder</title>
+  </head>
 
-<body>
   <body>
-    <header class="jumbotron">
-      <h1 class="display-3">My Team</h1>
-    </header>
-    <div class="container">
-
-
-
-
-
-
-
-
-      </body>
-
+      <header class="jumbotron">
+        <h1 class="display-3">My Team</h1>
+      </header>
+      <div class="container">
   <div class="card text-bg-info mb-3" style="max-width: 18rem;">
-    <div class="card-header">dad <span class="icon">   undefined 
-  <div class="card text-bg-info mb-3" style="max-width: 18rem;">
-    <div class="card-header">a <span class="icon">   undefined 
-  <div class="card text-bg-info mb-3" style="max-width: 18rem;">
-    <div class="card-header">e <span class="icon">undefined 
+    <div class="card-header">bvgcfhtyuyiu <span class="icon">Manager &#xF4C8;</span> </div>
+    <div class="card-body">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">ID: asdfasd </li>
+        <li class="list-group-item">Email: tryj </li>
+        <li class="list-group-item">Github: ewrefgf </li>
+      </ul>
+    </div>
+  </div></body>
